style.css
:root{
	--bgcolor: DarkSeaGreen;
	--fontcolor: white;
	--fonthighlight: #eba613;
	--linkcolor: DeepPink;
}

	<link rel="stylesheet" href="https://fonts.google.com/specimen/Abril+Fatface">
	
a:link, a:visited {
  color: var(--fontcolor);
  text-decoration: none;
}

a:hover, a:active {
  color: var(--fonthighlight);
  text-decoration: none;
}

nav a, footer div a{
	margin:100px 5px;
	font-family: "Abril Fatface";
	font-size: 20px;
	font-weight: bold;
}

footer{
	margin-top:40px;
	padding-top: 100px;
	text-align: center;
	font-size: 12px;
}

body{
	font-family: Arial;
	color: var(--fontcolor);
	margin: auto;
	padding-top: 18px;
	padding-bottom: 18px;
	padding-right: 18px;
	padding-left: 100px;
	max-width: 50%;
	font-size: 18px;
	text-align: left;
	background-color: var(--bgcolor);
	background-image: url('./background3.jpg');
  	background-repeat: center center;
 	background-attachment: relative;
 	background-position: cover;
}

h1{
	font-family: "Abril Fatface";
	color: var(--fontcolor);
	font-size: 40px;
}

h2{
	font-family: "Abril Fatface";
	color: var(--fontcolor);
	font-size: 30px;
}

div.relative{
	position: relative;
	left 60;
}

img, video{
	max-width: 600px;
	border: 2px solid #eba613;
}

.responsive {
  width: 100%;
  height: auto;
}

